Fix grid spacing on main game board

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,21 @@ flex-direction: column;
 padding-top: 100%; */
 
 /* height: 90vh; */
+width: 100%;
+height: 100%;
 display:grid;
 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 gap: 10px;
-padding:10px;
+/* padding:10px;
 align-items: center;
-justify-items: center;
-background: yellow;
+justify-items: center; */
+background: orange;
+
+justify-content: space-evenly;
+  justify-items: center;
+  align-content: space-evenly;
+  align-items: center;
  }
 
  .slot{
@@ -68,7 +75,7 @@ transition: 0.5s;
     transform: translateZ(-350px);
     transition: transform 0.7s;
 
-   display: block;
+   
    
 }
 
@@ -89,7 +96,7 @@ transition: 0.5s;
   
 
 
-  display: block;
+  
   }
 
   /* .boxfacefront  {  transform: rotateY(  0deg) translateZ(350px);}
